--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "identity-obj-proxy": "3.0.0",
         "jquery": "^3.6.0",
         "mini-css-extract-plugin": "0.11.3",
+        "mkdirp": "^1.0.4",
         "node-fetch": "^3.2.6",
         "optimize-css-assets-webpack-plugin": "6.0.1",
         "owl.carousel": "^2.3.4",
@@ -99,7 +100,7 @@
         "workbox-webpack-plugin": "6.4.2"
     },
     "scripts": {
-        "start": "./env.sh && mv env-config.js ./public/ && INLINE_RUNTIME_CHUNK=false node scripts/start.js",
+        "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
         "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
         "test": "node scripts/test.js",
