--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "postcss-safe-parser": "5.0.2",
         "prompts": "2.4.2",
         "react": "^17.0.2",
-        "react-app-polyfill": "^2.0.0",
+        "react-app-polyfill": "^3.0.0",
         "react-dom": "^17.0.2",
         "react-refresh": "^0.9.0",
         "react-router-dom": "^6.1.1",
@@ -89,18 +89,18 @@
         "jest-watch-typeahead": "1.0.0",
         "k6": "^0.0.0",
         "prettier": "^2.5.1",
-        "prop-types": "^15.7.2",
+        "prop-types": "^15.8.1",
         "react-dev-utils": "^11.0.3",
         "swagger-ui-react": "^4.1.3",
         "wdio-chromedriver-service": "^7.2.2",
         "webdriverio": "^7.16.11",
         "webpack": "4.46.0",
-        "webpack-dev-server": "3.11.1",
+        "webpack-dev-server": "4.11.1",
         "webpack-manifest-plugin": "2.2.0",
         "workbox-webpack-plugin": "6.4.2"
     },
     "scripts": {
-        "start": "./env.sh && mv env-config.js ./public/ && INLINE_RUNTIME_CHUNK=false node scripts/start.js",
+        "start": "./env.sh && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
         "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
         "test": "node scripts/test.js",
