--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "camelcase": "^6.2.1",
         "case-sensitive-paths-webpack-plugin": "2.4.0",
         "css-loader": "5.2.7",
-        "design-react-kit": "^3.3.3",
+        "design-react-kit": "^4.0.2",
         "dotenv": "10.0.0",
         "dotenv-expand": "5.1.0",
         "file-loader": "6.2.0",
@@ -60,7 +60,7 @@
         "web-vitals": "^2.1.2"
     },
     "devDependencies": {
-        "@babel/register": "^7.16.5",
+        "@babel/register": "^7.18.9",
         "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
         "@svgr/webpack": "5.5.0",
         "@types/k6": "^0.35.2",
@@ -76,7 +76,7 @@
         "eslint-config-react-app": "^6.0.0",
         "eslint-plugin-flowtype": "^5.2.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^25.3.0",
+        "eslint-plugin-jest": "^27.1.3",
         "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.27.1",
@@ -100,7 +100,7 @@
         "workbox-webpack-plugin": "6.4.2"
     },
     "scripts": {
-        "start": "./env.sh && mv env-config.js ./public/ && INLINE_RUNTIME_CHUNK=false node scripts/start.js",
+        "start": "./env.sh && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
         "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
         "test": "node scripts/test.js",
@@ -156,14 +156,16 @@
         ],
         "testEnvironment": "jsdom",
         "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
+        "testPathIgnorePatterns":["/node_modules/"],
         "transform": {
             "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
             "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
             "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
         },
         "transformIgnorePatterns": [
-            "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
+            
             "^.+\\.module\\.(css|sass|scss)$"
+            
         ],
         "modulePaths": [],
         "moduleNameMapper": {
