--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "react": "^17.0.2",
         "react-app-polyfill": "^3.0.0",
         "react-dom": "^17.0.2",
-        "react-refresh": "^0.9.0",
+        "react-refresh": "^0.11.0",
         "react-router-dom": "^6.4.3",
         "readline": "^1.3.0",
         "resolve": "1.20.0",
@@ -61,7 +61,7 @@
     },
     "devDependencies": {
         "@babel/register": "^7.18.9",
-        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
         "@svgr/webpack": "5.5.0",
         "@types/k6": "^0.41.0",
         "@wdio/cli": "^7.25.4",
@@ -102,7 +102,7 @@
     "scripts": {
         "start": "./env.sh && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
-        "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
+        "build": "set INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
         "test": "node scripts/test.js",
         "test:coverage": "node scripts/test.js --coverage --watchAll=false",
         "test:e2e": "wdio run ./test/config/wdio.conf.js",
