--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@babel/core": "7.16.5",
+        "@babel/runtime": "^7.20.1",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.5.0",
@@ -156,16 +157,16 @@
         ],
         "testEnvironment": "jsdom",
         "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
-        "testPathIgnorePatterns":["/node_modules/"],
+        "testPathIgnorePatterns": [
+            "/node_modules/"
+        ],
         "transform": {
             "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
             "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
             "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
         },
         "transformIgnorePatterns": [
-            
             "^.+\\.module\\.(css|sass|scss)$"
-            
         ],
         "modulePaths": [],
         "moduleNameMapper": {
