--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "wdio-chromedriver-service": "^8.0.0",
         "webdriverio": "^7.25.4",
         "webpack": "5.0.0",
+        "webpack-cli": "^4.10.0",
         "webpack-dev-server": "4.11.1",
         "webpack-manifest-plugin": "5.0.0",
         "workbox-webpack-plugin": "6.5.4"
@@ -103,7 +104,7 @@
     "scripts": {
         "start": "./env.sh && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
-        "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
+        "build": "set INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
         "test": "node scripts/test.js",
         "test:coverage": "node scripts/test.js --coverage --watchAll=false",
         "test:e2e": "wdio run ./test/config/wdio.conf.js",
