--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@babel/core": "7.20.2",
         "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.12.13",
         "@babel/runtime": "^7.20.1",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.1.0",
@@ -195,8 +196,9 @@
     },
     "babel": {
         "presets": [
-            "react-app"
-        ]
+            "@babel/preset-env",
+            ["@babel/preset-react", { "runtime": "automatic" }]
+          ]
     },
     "proxy": "http://localhost:5001"
 }
