--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "7.16.5",
+        "@babel/core": "7.20.2",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.12.13",
+        "@babel/runtime": "^7.20.1",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.5.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
-        "babel-loader": "8.3.0",
+        "babel-loader": "9.1.0",
         "babel-plugin-named-asset-import": "^0.3.8",
         "babel-preset-react-app": "^10.0.1",
         "bfj": "^7.0.2",
@@ -27,7 +30,7 @@
         "husky": "7.0.4",
         "identity-obj-proxy": "3.0.0",
         "jquery": "^3.6.0",
-        "mini-css-extract-plugin": "1.0.0",
+        "mini-css-extract-plugin": "1.6.2",
         "mkdirp": "^1.0.4",
         "node-fetch": "^3.2.10",
         "optimize-css-assets-webpack-plugin": "6.0.1",
@@ -43,7 +46,7 @@
         "react": "^17.0.2",
         "react-app-polyfill": "^3.0.0",
         "react-dom": "^17.0.2",
-        "react-refresh": "^0.9.0",
+        "react-refresh": "^0.11.0",
         "react-router-dom": "^6.4.3",
         "readline": "^1.3.0",
         "resolve": "1.20.0",
@@ -61,10 +64,10 @@
     },
     "devDependencies": {
         "@babel/register": "^7.18.9",
-        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
         "@svgr/webpack": "5.5.0",
-        "@wdio/cli": "^7.25.4",
         "@types/k6": "^0.41.0",
+        "@wdio/cli": "^7.25.4",
         "@wdio/jasmine-framework": "^7.16.11",
         "@wdio/local-runner": "^7.16.12",
         "@wdio/spec-reporter": "^7.16.11",
@@ -91,12 +94,13 @@
         "prettier": "^2.5.1",
         "prop-types": "^15.8.1",
         "react-dev-utils": "^11.0.3",
-        "swagger-ui-react": "^4.1.3",
+        "swagger-ui-react": "^4.15.5",
         "wdio-chromedriver-service": "^8.0.0",
         "webdriverio": "^7.25.4",
-        "webpack": "4.46.0",
+        "webpack": "5.0.0",
+        "webpack-cli": "^4.10.0",
         "webpack-dev-server": "4.11.1",
-        "webpack-manifest-plugin": "2.2.0",
+        "webpack-manifest-plugin": "5.0.0",
         "workbox-webpack-plugin": "6.5.4"
     },
     "scripts": {
@@ -156,16 +160,16 @@
         ],
         "testEnvironment": "jsdom",
         "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
-        "testPathIgnorePatterns":["/node_modules/"],
+        "testPathIgnorePatterns": [
+            "/node_modules/"
+        ],
         "transform": {
             "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
             "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
             "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
         },
         "transformIgnorePatterns": [
-            
             "^.+\\.module\\.(css|sass|scss)$"
-            
         ],
         "modulePaths": [],
         "moduleNameMapper": {
@@ -192,8 +196,9 @@
     },
     "babel": {
         "presets": [
-            "react-app"
-        ]
+            "@babel/preset-env",
+            ["@babel/preset-react", { "runtime": "automatic" }]
+          ]
     },
     "proxy": "http://localhost:5001"
 }
