--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
         "k6": "^0.0.0",
         "prettier": "^2.5.1",
         "prop-types": "^15.8.1",
-        "react-dev-utils": "^11.0.3",
+        "react-dev-utils": "^12.0.1",
         "swagger-ui-react": "^4.15.5",
         "wdio-chromedriver-service": "^8.0.0",
         "webdriverio": "^7.25.4",
@@ -106,7 +106,7 @@
     "scripts": {
         "start": "./env.sh && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
-        "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
+        "build": "set INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
         "test": "node scripts/test.js",
         "test:coverage": "node scripts/test.js --coverage --watchAll=false",
         "test:e2e": "wdio run ./test/config/wdio.conf.js",
