--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "husky": "7.0.4",
         "identity-obj-proxy": "3.0.0",
         "jquery": "^3.6.0",
+        "loader-utils": "1.4.2",
         "mini-css-extract-plugin": "1.0.0",
         "mkdirp": "^1.0.4",
         "node-fetch": "^3.2.10",
@@ -63,8 +64,8 @@
         "@babel/register": "^7.18.9",
         "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
         "@svgr/webpack": "5.5.0",
-        "@wdio/cli": "^7.25.4",
         "@types/k6": "^0.41.0",
+        "@wdio/cli": "^7.25.4",
         "@wdio/jasmine-framework": "^7.16.11",
         "@wdio/local-runner": "^7.16.12",
         "@wdio/spec-reporter": "^7.16.11",
@@ -156,16 +157,16 @@
         ],
         "testEnvironment": "jsdom",
         "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
-        "testPathIgnorePatterns":["/node_modules/"],
+        "testPathIgnorePatterns": [
+            "/node_modules/"
+        ],
         "transform": {
             "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
             "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
             "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
         },
         "transformIgnorePatterns": [
-            
             "^.+\\.module\\.(css|sass|scss)$"
-            
         ],
         "modulePaths": [],
         "moduleNameMapper": {
