--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "7.20.2",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.12.13",
-        "@babel/runtime": "^7.20.1",
+        "@babel/core": "7.16.5",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.5.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
-        "babel-loader": "9.1.0",
+        "babel-loader": "8.3.0",
         "babel-plugin-named-asset-import": "^0.3.8",
         "babel-preset-react-app": "^10.0.1",
         "bfj": "^7.0.2",
@@ -30,7 +27,8 @@
         "husky": "7.0.4",
         "identity-obj-proxy": "3.0.0",
         "jquery": "^3.6.0",
-        "mini-css-extract-plugin": "1.6.2",
+        "loader-utils": "1.4.2",
+        "mini-css-extract-plugin": "1.0.0",
         "mkdirp": "^1.0.4",
         "node-fetch": "^3.2.10",
         "optimize-css-assets-webpack-plugin": "6.0.1",
@@ -46,7 +44,7 @@
         "react": "^17.0.2",
         "react-app-polyfill": "^3.0.0",
         "react-dom": "^17.0.2",
-        "react-refresh": "^0.11.0",
+        "react-refresh": "^0.9.0",
         "react-router-dom": "^6.4.3",
         "readline": "^1.3.0",
         "resolve": "1.20.0",
@@ -64,7 +62,7 @@
     },
     "devDependencies": {
         "@babel/register": "^7.18.9",
-        "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
         "@svgr/webpack": "5.5.0",
         "@types/k6": "^0.41.0",
         "@wdio/cli": "^7.25.4",
@@ -93,14 +91,13 @@
         "k6": "^0.0.0",
         "prettier": "^2.5.1",
         "prop-types": "^15.8.1",
-        "react-dev-utils": "^12.0.1",
-        "swagger-ui-react": "^4.15.5",
+        "react-dev-utils": "^11.0.3",
+        "swagger-ui-react": "^4.1.3",
         "wdio-chromedriver-service": "^8.0.0",
         "webdriverio": "^7.25.4",
-        "webpack": "5.0.0",
-        "webpack-cli": "^4.10.0",
+        "webpack": "4.46.0",
         "webpack-dev-server": "4.11.1",
-        "webpack-manifest-plugin": "5.0.0",
+        "webpack-manifest-plugin": "2.2.0",
         "workbox-webpack-plugin": "6.5.4"
     },
     "scripts": {
@@ -196,9 +193,8 @@
     },
     "babel": {
         "presets": [
-            "@babel/preset-env",
-            ["@babel/preset-react", { "runtime": "automatic" }]
-          ]
+            "react-app"
+        ]
     },
     "proxy": "http://localhost:5001"
 }
