--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "7.16.5",
+        "@babel/core": "7.20.2",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^13.5.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
-        "babel-loader": "8.3.0",
-        "babel-plugin-named-asset-import": "^0.3.8",
-        "babel-preset-react-app": "^10.0.1",
+        "babel-loader": "9.1.0",
+        "babel-plugin-named-asset-import": "^0.3.8",    
         "bfj": "^7.0.2",
         "bootstrap-italia": "^1.4.3",
         "camelcase": "^6.2.1",
@@ -23,12 +24,11 @@
         "file-loader": "6.2.0",
         "fs-extra": "^9.0.1",
         "history": "^5.3.0",
-        "html-webpack-plugin": "4.5.0",
+        "html-webpack-plugin": "5.5.0",
         "husky": "7.0.4",
         "identity-obj-proxy": "3.0.0",
         "jquery": "^3.6.0",
-        "loader-utils": "1.4.2",
-        "mini-css-extract-plugin": "1.0.0",
+        "mini-css-extract-plugin": "2.7.0",
         "mkdirp": "^1.0.4",
         "node-fetch": "^3.2.10",
         "optimize-css-assets-webpack-plugin": "6.0.1",
@@ -36,7 +36,7 @@
         "pnp-webpack-plugin": "1.7.0",
         "popper.js": "^1.16.1",
         "postcss-flexbugs-fixes": "4.2.1",
-        "postcss-loader": "3.0.0",
+        "postcss-loader": "7.0.1",
         "postcss-normalize": "8.0.1",
         "postcss-preset-env": "6.7.0",
         "postcss-safe-parser": "5.0.2",
@@ -55,19 +55,21 @@
         "stylelint": "14.14.1",
         "stylelint-config-sass-guidelines": "9.0.0",
         "stylelint-config-standard": "24.0.0",
-        "terser-webpack-plugin": "4.2.3",
+        "terser-webpack-plugin": "5.3.6",
         "ts-pnp": "1.2.0",
         "url-loader": "4.1.1",
-        "web-vitals": "^2.1.2"
+        "web-vitals": "^2.1.2",
+        "babel-preset-react-app":"10.0.1"
     },
     "devDependencies": {
         "@babel/register": "^7.18.9",
-        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-        "@svgr/webpack": "5.5.0",
-        "@types/k6": "^0.41.0",
+        "@babel/preset-flow":"7.18.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "0.5.9",
+        "@svgr/webpack": "6.5.1",
         "@wdio/cli": "^7.25.4",
+        "@types/k6": "^0.41.0",
         "@wdio/jasmine-framework": "^7.16.11",
-        "@wdio/local-runner": "^7.16.12",
+        "@wdio/local-runner": "^7.26.0",
         "@wdio/spec-reporter": "^7.16.11",
         "babel-eslint": "^10.1.0",
         "babel-jest": "29.3.1",
@@ -91,19 +93,19 @@
         "k6": "^0.0.0",
         "prettier": "^2.5.1",
         "prop-types": "^15.8.1",
-        "react-dev-utils": "^11.0.3",
-        "swagger-ui-react": "^4.1.3",
+        "react-dev-utils": "12.0.1",
+        "swagger-ui-react": "^4.15.5",
         "wdio-chromedriver-service": "^8.0.0",
         "webdriverio": "^7.25.4",
-        "webpack": "4.46.0",
+        "webpack": "5.75.0",
         "webpack-dev-server": "4.11.1",
-        "webpack-manifest-plugin": "2.2.0",
-        "workbox-webpack-plugin": "6.5.4"
+        "webpack-manifest-plugin": "5.0.0",
+        "workbox-webpack-plugin": "6.5.4"         
     },
     "scripts": {
-        "start": "./env.sh && mv env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
+        "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
         "start-mock-server": "node mock-server/src/index.js",
-        "build": "INLINE_RUNTIME_CHUNK=false node scripts/build.js",
+        "build": "set INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
         "test": "node scripts/test.js",
         "test:coverage": "node scripts/test.js --coverage --watchAll=false",
         "test:e2e": "wdio run ./test/config/wdio.conf.js",
@@ -157,16 +159,16 @@
         ],
         "testEnvironment": "jsdom",
         "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
-        "testPathIgnorePatterns": [
-            "/node_modules/"
-        ],
+        "testPathIgnorePatterns":["/node_modules/"],
         "transform": {
             "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
             "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
             "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
         },
         "transformIgnorePatterns": [
+            
             "^.+\\.module\\.(css|sass|scss)$"
+            
         ],
         "modulePaths": [],
         "moduleNameMapper": {
@@ -193,8 +195,8 @@
     },
     "babel": {
         "presets": [
-            "react-app"
-        ]
+            "@babel/preset-env",
+            ["@babel/preset-react"]]
     },
-    "proxy": "http://localhost:5001"
+    "proxy": "http://localhost:5001" 
 }
