--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
           cache: "yarn"
       - name: Install dependencies
         run: yarn --frozen-lockfile
+      - run: yarn lint --fix
       - run: yarn build
       - name: Upload production artifacts
         uses: actions/upload-artifact@v3.1.1
