--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,9 +27,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn --frozen-lockfile
       - run: yarn lint --fix
-      - run: yarn build
+      - run: sudo yarn build
       - name: Upload production artifacts
         uses: actions/upload-artifact@v3.1.1
         with:
